Updating chartjs failed, reverting to mid point of v2. Adding babelrc, fixing some alignment issues.

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
 #simplict{
     display: block;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     width: 100vw;
     background-image: url("/src/Assets/background.svg");
     background-position: center top;
     background-repeat: no-repeat;
+}
+
+body, html {
+    height: 100%;
 }
 
 /* width */
@@ -21,7 +26,7 @@
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: #888; 
-    height: 0.5rem;
+    width: 5px;
 }
 
 /* Handle on hover */
