--- a/src/Components/Statistics/Statistics.css
+++ b/src/Components/Statistics/Statistics.css
@@ -2,7 +2,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 100vw;
+    font-size: 1rem;
 }
 
 #stats_section{
@@ -21,6 +21,8 @@
     font-size: 1rem;
     font-weight: bold;
     background-color: white;
+    height: 10rem;
+    width: auto;
     padding: 0.5rem;
     overflow: auto;
     color: #483d8b;
@@ -28,9 +30,9 @@
 
 canvas {
     background-color: white;
-    height: 80%;
+    height: 10rem;
     width: auto;
-    padding: 0.5rem;
+    padding: 0.2rem;
 }
 
 
